# abax

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  conftest.py  justfile  launcher.py  make_pyz.py  mkdocs.yml  pyproject.toml  pyz_main.py  test.abax
.github/workflows/: ci.yml  docs.yml  release.yml
abax/: __init__.py  __main__.py  _runtime.py  api.py  app.py  autodeps.py  console_worker.py  diagnostics.py  doctor.py  kernel.py  macros.py  plugins.py  recorder.py  restricted.py  sandbox.py  sandbox_linux.py  settings.py  userconfig.py  widget.py  workers.py
abax/core/: __init__.py  _funcmeta_generated.py  abaxdiff.py  arrayfuncs.py  ast_nodes.py  budget.py  cellstore.py  chartobj.py  completion.py  connections.py  console_ns.py  criteria.py  depgraph.py  deptrace.py  dist_dotted.py  engineering_fns.py  errors.py  evaluator.py  excel_modern.py  externref.py  faceplate_assets.py  fileops.py  filesearch.py  fill.py  finance_bonds.py  finance_fns.py  fmbuttons.py  fonts.py  funcmeta.py  goalseek.py  graphing.py  hexview.py  lambda_fns.py  livearray.py  livecreds.py  livedata.py  livefuncs.py  math_fns.py  names.py  pandoc.py  (+28 more)
abax/core/calc/: __init__.py  algebraic.py  program.py  rpn.py  rpn12.py  rpn16.py  ti_engine.py  voyager.py  voyager_layout.py
abax/core/format/: __init__.py  cellformat.py  condformat.py
abax/core/functions/: __init__.py  builtins.py  rf.py
abax/core/io/: __init__.py  adif_io.py  csv_stream.py  exchange_io.py  markdown_io.py  notebook_io.py  restimport.py  sqlite_io.py  urlfetch.py  webtable.py  xml_io.py
abax/core/pm/: __init__.py  capacity.py  exporter.py  finance.py  importer.py  pmsvg.py  portfolio.py  projects.py  report.py  schedule.py  taskmodel.py
abax/core/science/: __init__.py  antenna_impedance.py  chartsvg.py  cluster.py  curvefit.py  descriptive.py  eigen.py  fft.py  filters.py  financial.py  gmm.py  hamlog.py  interp.py  iq.py  ml.py  mom.py  nec.py  nonparam.py  numeric.py  ode_implicit.py  resynth.py  rf.py  rf_bands.py  rf_math.py  signal.py  smithsvg.py  spectral.py  stats.py  wire_mom.py
abax/engine/: __init__.py  analysis.py  archive7z.py  archives.py  chartmpl.py  convert.py  dbapi.py  document.py  excel_io.py  extloaders.py  hdf5_io.py  nbrun.py  nbvalidate.py  necpy.py  npkernel.py  ods_io.py  parquet_io.py  satellite.py  statfiles.py  tts.py
abax/gui/: __init__.py  _qtcompat.py  chart_overlay.py  completion.py  icons.py  main_window.py  mixin_calc.py  mixin_console.py  mixin_document.py  mixin_io.py  mixin_macros.py  mixin_palette.py  mixin_pm.py  mixin_tools.py  mixin_view.py  print_export.py  runner.py  theming.py
abax/gui/calc/: __init__.py  algebraic_faceplate.py  calculator_panel.py  faceplate.py  image_faceplate.py  program_panel.py  ti_faceplate.py
abax/gui/console/: __init__.py  console_bridge.py  ptyterminal.py  pyconsole.py  terminal.py
abax/gui/dialogs/: __init__.py  antenna_dialog.py  antenna_modeler_dialog.py  border_dialog.py  budget_dialog.py  business_chart_dialog.py  chart_dialog.py  condformat_dialog.py  convert_dialog.py  curvefit_dialog.py  dataframe_dialog.py  deps_dialog.py  deptrace_dialog.py  describe_dialog.py  filemanager_dialog.py  filter_dialog.py  formula_browser.py  goalseek_dialog.py  graph_dialog.py  hamlog_dialog.py  hex_dialog.py  macro_manager_dialog.py  matrix_dialog.py  ml_dialog.py  ode_dialog.py  paste_special_dialog.py  pivot_dialog.py  pivot_sidebar.py  pm_scenario_dialog.py  preferences_dialog.py  (+13 more)
abax/tui/: __init__.py  app.py  commands.py  editor.py  keys.py  render.py  session.py  textual_app.py  themes.py
benchmarks/: profile_abax.py
docs/: architecture.md  automation.md  budgeting.md  calculators.md  charts.md  cli.md  conditional-formatting.md  configuration.md  data-analysis.md  data-science.md  file-formats.md  file-manager.md  formula-reference.md  function-coverage.md  getting-started.md  gui-guide.md  index.md  jupyter.md  licensing.md  macros-and-scripting.md  project-management.md  python-console.md  rf-toolkit.md  terminal.md
docs/examples/: README.md
macros/: sample.py
packaging/appimage/: 01-build-raw.sh  02-finalize.sh  Dockerfile  README.md  entrypoint.desktop
packaging/macos/: README.md  abax.spec  launch_abax.py  launch_worker.py  make_icns.sh  sign_and_notarize.sh
packaging/windows/: README.md  abax.spec  launch_abax.py  launch_worker.py  smoke.ps1
qcell/: __init__.py  _runtime.py  app.py  autodeps.py  console_worker.py  diagnostics.py  settings.py  tui.py
qcell/core/: completion.py  console_ns.py  fileops.py  fmbuttons.py  fonts.py  functions.py  profile.py  sheet.py  sqlsheets.py  values.py  workbook.py
qcell/engine/: __init__.py  document.py  npkernel.py
qcell/gui/: algebraic_faceplate.py  calculator_panel.py  command_palette.py  completion.py  condformat_dialog.py  console_bridge.py  equation_dialog.py  faceplate.py  graph_dialog.py  grid_model.py  image_faceplate.py  main_window.py  mixin_document.py  mixin_io.py  mixin_palette.py  mixin_settings.py  mixin_tools.py  ptyterminal.py  pyconsole.py  runner.py  theming.py  ti_faceplate.py
qcell/tui/: __init__.py  app.py  capabilities.py  editor.py
scripts/: bench_baseline.json  bench_gate.py  function_coverage.py  gen_funcmeta_descriptions.py
tests/: conftest.py  test_abaxdiff.py  test_adif_io.py  test_aggregate_fastpath.py  test_algebraic.py  test_analysis.py  test_ansipalette.py  test_antenna.py  test_antenna_impedance.py  test_api.py  test_archive.py  test_archive7z.py  test_arrayfuncs.py  test_arrayfuncs_integration.py  test_autodeps.py  test_bayes.py  test_budget.py  test_calc_mode.py  test_calc_program.py  test_cellformat.py  test_cellstore.py  test_cellstyle.py  test_chartmpl.py  test_chartobj.py  test_chartsvg.py  test_chartsvg_business.py  test_cli_argv.py  test_cli_schedule.py  test_cli_tasks.py  test_clipboard.py  test_cluster.py  test_cluster_count.py  test_colormap.py  test_comments.py  test_completion.py  test_completion_polish.py  test_complexnum.py  test_condformat.py  test_connected_data_wiring.py  test_connections.py  (+258 more)
(+88 files in other folders)
